--- a/css/styles.css
+++ b/css/styles.css
@@ -10,33 +10,29 @@
 
 /* Base styles for small devices */
 .container {
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 
-min-width: 320px;
-max-width: 428px;
-margin: 0 auto;
-padding-left: 16px;
-padding-right: 16px;
+  min-width: 320px;
+  max-width: 428px;
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 /* Tablet screen */
 
-@media screen and (min-width: 768px)
-{
+@media screen and (min-width: 768px) {
   .container {
-    max-width: 736px;
-   
+    max-width: 768px;
   }
 }
 /* Desctop screen */
 @media screen and (min-width: 1158px) {
-  .container
-   {max-width: 1158px;
+  .container {
+    max-width: 1158px;
     padding: 0 15px;
-    
   }
 }
-
 
 input {
   font-family: inherit;
@@ -101,8 +97,7 @@ button {
   padding-bottom: 96px;
 }
 
-@media screen and (min-width: 1440px)
-{
+@media screen and (min-width: 1440px) {
   .section {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -121,12 +116,12 @@ button {
 
 .title {
   color: var(--main-color);
-font-size: 36px;
-font-weight: 700;
-line-height: 111.111%; 
-letter-spacing: 0.72px;
-text-transform: capitalize;
-text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 111.111%;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 @media only screen and (min-width: 1158px) {
@@ -136,16 +131,21 @@ text-align: center;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--main-color);
-    
   }
 }
 
 .text {
   color: var(--post-info-color);
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5; 
-letter-spacing: 0.32px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+
+@media only screen and (min-width: 768px) {
+  .text {
+ 
+  }
 }
 
 
@@ -157,7 +157,7 @@ letter-spacing: 0.32px;
     color: var(--post-info-color);
     margin-bottom: 8px;
     font-weight: 400;
-  }   
+  }
 }
 
 .visually-hidden {
@@ -175,8 +175,6 @@ letter-spacing: 0.32px;
 }
 
 /* Header styles */
-
-
 
 .header.brd {
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -280,7 +278,6 @@ letter-spacing: 0.32px;
     display: flex;
     align-items: center;
     gap: 40px;
-
   }
 }
 
@@ -296,12 +293,9 @@ letter-spacing: 0.32px;
     display: flex;
     flex-direction: column;
     gap: 12px;
-  } 
+  }
 }
 
-.header-info.item {
-  
-}
 .header-info-link {
   font-style: normal;
   font-size: 16px;
@@ -322,46 +316,126 @@ letter-spacing: 0.32px;
 @media only screen and (max-width: 1157px) {
   .header-info-link {
     color: var(--post-info-color);
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.16;
-letter-spacing: 0.48px;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.48px;
   }
 }
 
 /* Hero section styles */
 
-.hero-container {
-}
-
 .section-hero {
   background-color: var(--main-color);
-  padding-top: 188px;
+  padding-top: 112px;
   padding-bottom: 188px;
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/people-office_mob@1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  max-width: 1440px;
   background-size: cover;
+  max-width: 428px;
+  height: 432px;
   margin: 0 auto;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .section-hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office_mob@2x.jpg);
+  }
+}
+
+@media only screen and (min-width: 767px) {
+  .section-hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg_tabl@1x.jpg);
+    max-width: 768px;
+    height: 436px;
+    padding-top: 112px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section-hero {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/Dark-bg_tabl@2x.jpg);
+    }
+  }
+}
+
+@media only screen and (min-width: 1157px) {
+  .section-hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office_desc@1x.jpg);
+    max-width: 1440px;
+    height: 600px;
+    padding-top: 188px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section-hero {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office_desc@2x.jpg);
+    }
+  }
 }
 
 .hero-title {
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   text-align: center;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.72px;
   color: var(--light-color);
-  max-width: 496px;
-  margin: 0 auto 48px;
+  max-width: 320px;
+  margin: 0 auto 72px;
 }
+
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 56px;
+    letter-spacing: 0.02em;
+    line-height: 1.07;
+    max-width: 496px;
+    margin: 0 auto 36px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .hero-title {
+    margin: 0 auto 48px;
+  }
+}
+
 .hero-btn {
   color: var(--light-color);
   background-color: var(--primary-brand);
@@ -386,57 +460,49 @@ letter-spacing: 0.48px;
 /* Benefits section styles */
 
 .benefits-list {
-
 }
 
 @media only screen and (min-width: 768px) {
-  .benefits-list{
-     
+  .benefits-list {
     display: flex;
     flex-wrap: wrap;
     row-gap: 72px;
     column-gap: 24px;
-}
+  }
 }
 
 @media only screen and (min-width: 1158px) {
-  .benefits-list{
-     
-      display: flex;
-      gap: 24px;
+  .benefits-list {
+    display: flex;
+    gap: 24px;
   }
 }
 
 .bnfts-title {
-  color: var(--navyblue, #2E2F42);
-font-size: 36px;
-font-weight: 700;
-line-height: 111.1%; 
-letter-spacing: 0.72px;
-text-transform: capitalize;
-margin-bottom: 8px;
+  color: var(--navyblue, #2e2f42);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 111.1%;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  margin-bottom: 8px;
 }
 
 @media only screen and (min-width: 768px) {
   .bnfts-title {
     text-align: left;
   }
-  }
-
+}
 
 @media only screen and (max-width: 767px) {
   .benefits-item:not(:last-child) {
-    margin-bottom: 72px; 
-    
+    margin-bottom: 72px;
   }
 }
-
-
 
 @media only screen and (min-width: 768px) {
   .benefits-item {
     width: calc((100% - 24px) / 2);
-    
   }
 }
 
@@ -446,11 +512,9 @@ margin-bottom: 8px;
   }
 }
 
-
-
 @media only screen and (max-width: 1157px) {
-  .benefits-icon { display: none;
-   
+  .benefits-icon {
+    display: none;
   }
 }
 
@@ -466,8 +530,6 @@ margin-bottom: 8px;
     justify-content: center;
   }
 }
-
-
 
 /* Section doing */
 
@@ -495,7 +557,6 @@ margin-bottom: 8px;
 }
 
 /* Section team styles */
-
 
 .section-team {
   background: var(--footer-text);
@@ -526,28 +587,24 @@ margin-bottom: 8px;
 
 @media only screen and (min-width: 1158px) {
   .team-list {
-    
     display: flex;
     gap: 24px;
   }
 }
 
 .team-item {
-
   background-color: var(--light-color);
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-  
 }
 
 @media only screen and (min-width: 1158px) {
   .team-item {
-   
     width: calc((100% - 72px) / 4);
     height: 428px;
-  } 
+  }
 }
 
 .title-team {
@@ -562,21 +619,21 @@ margin-bottom: 8px;
 .title-persn {
   margin-bottom: 8px;
   color: var(--main-color);
-text-align: center;
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2; 
-letter-spacing: 0.4px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
 }
 
 .text-team {
-color: var(--post-info-color);
-text-align: center;
-font-size: 16px;
-font-weight: 400;
-line-height: 1.5;
-letter-spacing: 0.32px;
-margin-bottom: 8px;
+  color: var(--post-info-color);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin-bottom: 8px;
 }
 
 .network-team {
@@ -620,20 +677,14 @@ margin-bottom: 8px;
   margin-bottom: 72px;
 }
 
-.customers-container {
-}
-
-
 .clients-list {
-
   display: flex;
   justify-content: center;
   column-gap: 16px;
-  row-gap:  72px;
+  row-gap: 72px;
   flex-direction: row;
   flex-wrap: wrap;
 }
-
 
 @media only screen and (min-width: 768px) {
   .clients-list {
@@ -642,7 +693,6 @@ margin-bottom: 8px;
     column-gap: 24px;
   }
 }
-
 
 @media only screen and (min-width: 1158px) {
   .clients-list {
@@ -654,7 +704,6 @@ margin-bottom: 8px;
 
 .clients-item {
   list-style-type: none;
-  
 }
 
 .clients-link {
@@ -671,11 +720,10 @@ margin-bottom: 8px;
 }
 
 @media only screen and (min-width: 768px) {
-  .clients-link  {
+  .clients-link {
     width: 168px;
   }
 }
-
 
 .clients-link:hover,
 .clients-link:focus {
@@ -692,7 +740,7 @@ margin-bottom: 8px;
 @media only screen and (max-width: 767px) {
   .footer-container {
     text-align: center;
-  } 
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -700,27 +748,25 @@ margin-bottom: 8px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  } 
+  }
 }
-
 
 @media only screen and (min-width: 1158px) {
   .footer-container {
     display: flex;
     align-items: baseline;
-  } 
+  }
 }
-
 
 .footer {
   background-color: var(--main-color);
   padding: 96px 0;
-} 
+}
 
 @media only screen and (min-width: 1158px) {
   .footer {
     padding: 100px 0;
-  } 
+  }
 }
 
 .logo-ftr {
@@ -739,9 +785,8 @@ margin-bottom: 8px;
   .footer-text {
     margin: 0 auto;
     text-align: left;
-  } 
+  }
 }
-
 
 @media only screen and (max-width: 767px) {
   .ftr-logo {
@@ -772,51 +817,48 @@ margin-bottom: 8px;
   margin-bottom: 16px;
 }
 
-.ftr-info {
-  margin-bottom: 72px;
+@media only screen and (max-width: 1157px) {
+  .ftr-info {
+    margin-bottom: 72px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   .ftr-info {
-    margin-right: 24px;  
-  } 
+    margin-right: 24px;
+  }
 }
 
 @media only screen and (min-width: 1158px) {
   .ftr-info {
-    margin-right: 120px;   
+    margin-right: 120px;
   }
 }
-
 
 .network-link.ftr:hover,
 .network-link.ftr:focus {
   background-color: #31d0aa;
 }
 
-.network-team-icon.ftr {
-
-margin-bottom: 72px;
+@media only screen and (max-width: 1157px) {
+  .network-team-icon.ftr {
+    margin-bottom: 72px;
+  } 
 }
 
 @media only screen and (min-width: 768px) {
   .network-team-icon.ftr {
     margin-right: 80px;
-  } 
+  }
 }
 
-
-
-
 /* Footer e-mail / subscribe */
-
 
 @media only screen and (min-width: 768px) and (max-width: 1157px) {
   .ftr-form-info {
     margin-inline-end: 124px;
-  } 
+  }
 }
-
 
 @media only screen and (min-width: 768px) {
   .footer_form {
@@ -828,7 +870,6 @@ margin-bottom: 72px;
 
 @media only screen and (max-width: 767px) {
   .footer_form-label {
-  
     width: 100%;
   }
 }
@@ -851,7 +892,6 @@ margin-bottom: 72px;
 
 @media only screen and (max-width: 1157px) {
   .footer_form-input {
-  
     opacity: 0.30000001192092896;
   }
 }
@@ -859,8 +899,8 @@ margin-bottom: 72px;
 @media only screen and (max-width: 767px) {
   .footer_form-input {
     margin-bottom: 16px;
-    width: 100%;} 
-  
+    width: 100%;
+  }
 }
 
 .footer_form-input::placeholder {
@@ -870,8 +910,6 @@ margin-bottom: 72px;
   line-height: 24px;
   letter-spacing: 0.48px;
 }
-
-
 
 .button-subscribe {
   display: flex;
@@ -888,8 +926,7 @@ margin-bottom: 72px;
   letter-spacing: 0.04em;
 }
 .button-subscribe:hover,
-.button-subscribe:focus  {
-
+.button-subscribe:focus {
   background-color: var(--action-color);
 }
 
@@ -910,7 +947,6 @@ margin-bottom: 72px;
   fill: var(--light-color);
   margin-left: 16px;
 }
-
 
 /* Portfolio */
 
@@ -1116,7 +1152,7 @@ margin-bottom: 72px;
 .modal-caption {
   display: block;
   color: var(--main-color);
-  
+
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -1147,8 +1183,8 @@ margin-bottom: 72px;
   width: 100%;
   height: 40px;
   padding-left: 38px;
-  font-size: 12px; 
-  line-height: 1.17; 
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -1171,12 +1207,11 @@ margin-bottom: 72px;
   height: 120px;
   padding: 8px 16px;
   resize: none;
-  font-size: 12px; 
-  line-height: 1.17; 
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-  
-  
+
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   background-color: transparent;
@@ -1257,8 +1292,9 @@ margin-bottom: 72px;
   margin-right: 8px;
 }
 
-
-.modal-form-checkbox:checked + .modal-form-agreement > .modal-form-custom-checkbox {
+.modal-form-checkbox:checked
+  + .modal-form-agreement
+  > .modal-form-custom-checkbox {
   fill: var(--footer-text);
   background-color: var(--action-color);
   border: none;
@@ -1277,24 +1313,20 @@ margin-bottom: 72px;
 
 .menu-toggle-icon {
   stroke: var(--main-color);
-  
 }
 
 .menu-toggle {
-  
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   margin: 0;
   padding: 24px 16px 24px 173px;
   background-color: transparent;
   border: none;
   border-radius: 50%;
   outline: none;
-
 }
-
 
 @media (min-width: 768px) {
   .menu-toggle {
@@ -1311,8 +1343,8 @@ margin-bottom: 72px;
   padding: 80px 35px 40px 40px;
   background-color: var(--light-color);
   z-index: 999;
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
@@ -1334,15 +1366,15 @@ flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-container .menu-toggle:hover,
 .menu-container .menu-toggle:focus {
-background-color: #404bbf;
-border: none;
-fill: #ffffff;
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
 }
 
 /* .mobile-menu {
@@ -1358,62 +1390,53 @@ fill: #ffffff;
   text-decoration: none;
 } */
 
-
 .mobile-menu {
   list-style: none;
   width: fit-content;
   margin-bottom: auto;
- 
 }
 
 .mobile-menu-item:not(:last-child) {
   margin-bottom: 40px;
-  
-
 }
 .mobile-menu-link {
   color: var(--main-color);
-font-size: 36px;
+  font-size: 36px;
 
-font-weight: 700;
-line-height: 1.1; 
-letter-spacing: 0.72px
+  font-weight: 700;
+  line-height: 1.1;
+  letter-spacing: 0.72px;
 }
 
 .mobile-menu-link:hover,
 .mobile-menu-link:focus {
-
   color: var(--action-color);
 }
 
 .mobile-menu-info {
   margin-bottom: 48px;
-
 }
 
 .mobile-info-item:not(:last-child) {
   margin-bottom: 40px;
- 
 }
 
 .mobile-menu-info-link {
   color: var(--primary-brand);
-font-size: 36px;
-font-style: normal;
-font-weight: 700;
-line-height: 1.1; 
-letter-spacing: 0.72px
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.1;
+  letter-spacing: 0.72px;
 }
 
 .mobile-info-link {
-
   color: var(--post-info-color);
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 1.2;
-letter-spacing: 0.4px;
-
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
 }
 
 .network-team-icon.mobile {
@@ -1421,6 +1444,5 @@ letter-spacing: 0.4px;
   padding-right: 60px;
 }
 .network-team.mobile {
-  gap: 56px
+  gap: 56px;
 }
-  
