--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@
 }
 
 /* Base styles for small devices */
-.container {
-  /* outline: 2px solid red; */
+@media only screen and (min-width: 320px) {
+  .container { 
+  outline: 2px solid red;
 
   min-width: 320px;
   max-width: 428px;
@@ -18,6 +19,7 @@
   padding-left: 16px;
   padding-right: 16px;
 }
+  }
 
 /* Tablet screen */
 
@@ -131,6 +133,7 @@ button {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--main-color);
+    text-align: left;
   }
 }
 
@@ -189,8 +192,10 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
+ 
 .header nav {
   display: flex;
   align-items: center;
@@ -211,7 +216,7 @@ button {
   color: var(--primary-brand);
   text-decoration: none;
   padding: 24px 0;
-  margin-right: 76px;
+ 
 }
 .logo {
   color: var(--main-color);
@@ -222,6 +227,13 @@ button {
   display: flex;
   align-items: flex-start;
   gap: 40px;
+  margin-left: 120px;
+}
+
+@media only screen and (min-width: 1158px) {
+  .header-list {
+    margin-left: 76px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -289,7 +301,7 @@ button {
 
 @media only screen and (max-width: 1157px) {
   .header-info.list {
-    list-style: none;
+    
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -313,7 +325,7 @@ button {
   color: var(--action-color);
 }
 
-@media only screen and (max-width: 1157px) {
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
   .header-info-link {
     color: var(--post-info-color);
     font-size: 12px;
@@ -321,6 +333,7 @@ button {
     font-weight: 400;
     line-height: 1.16;
     letter-spacing: 0.48px;
+    padding: 0;
   }
 }
 
@@ -646,6 +659,7 @@ button {
 .network-item {
   width: 40px;
   height: 40px;
+  
 }
 
 .network-link {
@@ -978,6 +992,17 @@ button {
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
+.portf-title {
+
+  color: var(--main-color);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.4px;
+    margin-bottom: 8px;
+    text-align: left;
+}
+
 /* Overlayyyy */
 /* 00000000000 */
 
@@ -1070,9 +1095,6 @@ button {
   padding: 32px 16px;
 }
 
-.portf-title {
-  margin-bottom: 8px;
-}
 
 /* Modal styles */
 
@@ -1316,16 +1338,19 @@ button {
 }
 
 .menu-toggle {
+  
   display: flex;
   align-items: center;
   justify-content: center;
-
-  margin: 0;
-  padding: 24px 16px 24px 173px;
+  padding: 0;
   background-color: transparent;
   border: none;
   border-radius: 50%;
   outline: none;
+      position: absolute;
+        top: 24px;
+        right: 16px;
+   
 }
 
 @media (min-width: 768px) {
@@ -1348,6 +1373,7 @@ button {
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
+
 
 .menu-container.is-open {
   transform: translateX(0);
@@ -1377,18 +1403,7 @@ button {
   fill: #ffffff;
 }
 
-/* .mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
 
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
-} */
 
 .mobile-menu {
   list-style: none;
@@ -1413,9 +1428,7 @@ button {
   color: var(--action-color);
 }
 
-.mobile-menu-info {
-  margin-bottom: 48px;
-}
+
 
 .mobile-info-item:not(:last-child) {
   margin-bottom: 40px;
@@ -1439,10 +1452,20 @@ button {
   letter-spacing: 0.4px;
 }
 
+
 .network-team-icon.mobile {
-  margin: 0 auto;
-  padding-right: 60px;
+display: flex;
+
+
 }
+
 .network-team.mobile {
   gap: 56px;
+      justify-content: left;
+ 
+}
+
+.address-mobile {
+
+  margin-bottom: 48px;
 }
